# OREKA_BACKEND

./: .gitignore  README.md  kpi_calculations.py  main.py  models.py  pyproject.toml  upload.py
src/oreka_backend/: kpi_calculations.py  main.py  models.py  pdfExtractor.py  upload.py
